# football-api-service/api/controllers/game-controller.js
@@ -25,7 +25,7 @@ var faker = require('faker');
   we specify that in the exports of this module that 'hello' maps to the function named 'hello'
  */
 module.exports = {
-    game: getGame,
+    games: getGame,
 };
 
 let teams = [
